--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <groupId>sonia.scm.plugins</groupId>
   <artifactId>scm-issuetracker-plugin</artifactId>
   <packaging>jar</packaging>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <name>${project.artifactId}</name>
   <description>Helper classes for issuetracker plugins.</description>
 
@@ -60,9 +60,4 @@
     </repository>
   
   </repositories>
-
-
-  <scm>
-    <tag>1.0</tag>
-  </scm>
 </project>
