--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <groupId>sonia.scm.plugins</groupId>
   <artifactId>scm-issuetracker-plugin</artifactId>
   <packaging>jar</packaging>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.2</version>
   <name>${project.artifactId}</name>
   <description>Helper classes for issuetracker plugins.</description>
 
@@ -60,4 +60,8 @@
     </repository>
   
   </repositories>
+
+  <scm>
+    <tag>1.2</tag>
+  </scm>
 </project>
