--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
   <version>1.3-SNAPSHOT</version>
   <name>${project.artifactId}</name>
   <description>Helper classes for issuetracker plugins.</description>
+  <url>https://bitbucket.org/sdorra/scm-issuetracker-plugin</url>
 
   <dependencies>
 
