--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <groupId>sonia.scm.plugins</groupId>
   <artifactId>scm-issuetracker-plugin</artifactId>
   <packaging>jar</packaging>
-  <version>1.3</version>
+  <version>1.4-SNAPSHOT</version>
   <name>${project.artifactId}</name>
   <description>Helper classes for issuetracker plugins.</description>
   <url>https://bitbucket.org/sdorra/scm-issuetracker-plugin</url>
@@ -61,8 +61,4 @@
     </repository>
   
   </repositories>
-
-  <scm>
-    <tag>1.3</tag>
-  </scm>
 </project>
