--- a/pom.xml
+++ b/pom.xml
@@ -6,25 +6,18 @@
   <parent>
     <artifactId>scm-plugins</artifactId>
     <groupId>sonia.scm.plugins</groupId>
-    <version>1.33</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
 
   <groupId>sonia.scm.plugins</groupId>
   <artifactId>scm-issuetracker-plugin</artifactId>
-  <packaging>jar</packaging>
+  <packaging>smp</packaging>
   <version>1.4-SNAPSHOT</version>
   <name>${project.artifactId}</name>
   <description>Helper classes for issuetracker plugins.</description>
   <url>https://bitbucket.org/sdorra/scm-issuetracker-plugin</url>
 
   <dependencies>
-
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>${servlet.version}</version>
-      <scope>provided</scope>
-    </dependency>
 
     <!-- test scope -->
 
@@ -36,21 +29,7 @@
     </dependency>
 
   </dependencies>
-  
-  <build>
-    <plugins>
-      
-      <plugin>
-        <groupId>sonia.scm.maven</groupId>
-        <artifactId>scm-maven-plugin</artifactId>
-        <version>1.34</version>
-        <configuration>
-          <loggginConfiguration>src/main/conf/logging.xml</loggginConfiguration>
-        </configuration>
-      </plugin>
-      
-    </plugins>
-  </build>
+
 
   <repositories>
     
