--- a/src/main/resources/META-INF/scm/plugin.xml
+++ b/src/main/resources/META-INF/scm/plugin.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plugin SYSTEM "https://download.scm-manager.org/dtd/plugin/2.0.0-01.dtd">
 <!--
 
     Copyright (c) 2010, Sebastian Sdorra
@@ -32,7 +33,7 @@
 
 -->
 <plugin>
-
+  <scm-version>2</scm-version>
   <information>
     <author>Sebastian Sdorra</author>
     <category>Library Plugin</category>
@@ -41,15 +42,5 @@
   <conditions>
     <min-version>${project.parent.version}</min-version>
   </conditions>
-
-  <packages>
-    <package>sonia.scm.issuetracker</package>
-  </packages>
-
-  <resources>
-    <!--
-    <script>/scm/</script>
-    -->
-  </resources>
 
 </plugin>
