Refactoring & enzyme tests

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@scm-manager/ui-types": "latest"
   },
   "devDependencies": {
-    "@scm-manager/ui-bundler": "^0.0.24"
+    "@scm-manager/ui-bundler": "^0.0.24",
+    "enzyme": "^3.4.1",
+    "enzyme-adapter-react-16": "^1.2.0"
   }
 }
