--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
   "name": "@scm-manager/scm-issuetracker-plugin",
+  "private": true,
+  "version": "2.0.0-SNAPSHOT",
   "license": "BSD-3-Clause",
   "main": "src/main/js/index.js",
   "scripts": {
-    "build": "ui-bundler plugin",
-    "watch": "ui-bundler plugin -w",
-    "lint": "ui-bundler lint",
-    "test": "ui-bundler test --ci",
-    "flow": "flow check"
+    "build": "ui-scripts plugin",
+    "watch": "ui-scripts plugin-watch",
+    "test": "jest"
   },
   "dependencies": {
-    "@scm-manager/ui-components": "latest",
-    "@scm-manager/ui-extensions": "^0.1.1",
-    "@scm-manager/ui-types": "latest"
+    "@scm-manager/ui-plugins": "latest"
   },
-  "devDependencies": {
-    "@scm-manager/ui-bundler": "^0.0.25",
-    "enzyme": "^3.4.1",
-    "enzyme-adapter-react-16": "^1.2.0"
+  "babel": {
+    "presets": [
+      "@scm-manager/babel-preset"
+    ]
+  },
+  "jest": {
+    "preset": "@scm-manager/jest-preset"
+  },
+  "prettier": "@scm-manager/prettier-config",
+  "eslintConfig": {
+    "extends": "@scm-manager/eslint-config"
   }
 }
