--- a/src/main/resources/META-INF/scm/plugin.xml
+++ b/src/main/resources/META-INF/scm/plugin.xml
@@ -47,4 +47,8 @@
     <min-version>${project.parent.version}</min-version>
   </conditions>
 
+  <resources>
+    <script>assets/scm-issuetracker-plugin.bundle.js</script>
+  </resources>
+
 </plugin>
