migrate from flow to typescript and update react-i18n

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "2.0.0-SNAPSHOT",
   "license": "BSD-3-Clause",
-  "main": "src/main/js/index.js",
+  "main": "./src/main/js/index.ts",
   "scripts": {
     "build": "ui-scripts plugin",
     "watch": "ui-scripts plugin-watch",
