--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,12 @@
   <parent>
     <artifactId>scm-plugins</artifactId>
     <groupId>sonia.scm.plugins</groupId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-rc1</version>
   </parent>
 
-  <groupId>sonia.scm.plugins</groupId>
   <artifactId>scm-issuetracker-plugin</artifactId>
   <packaging>smp</packaging>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0-rc1</version>
   <name>${project.artifactId}</name>
   <description>Helper classes for issuetracker plugins</description>
   <url>https://github.com/scm-manager/scm-issuetracker-plugin</url>
