--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
   <artifactId>scm-issuetracker-plugin</artifactId>
   <packaging>smp</packaging>
-  <version>2.0.0</version>
+  <version>2.1.0-SNAPSHOT</version>
   <name>${project.artifactId}</name>
   <description>Helper classes for issuetracker plugins</description>
   <url>https://github.com/scm-manager/scm-issuetracker-plugin</url>
