--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
   <parent>
     <artifactId>scm-plugins</artifactId>
     <groupId>sonia.scm.plugins</groupId>
-    <version>2.0.0</version>
+    <version>2.2.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>scm-issuetracker-plugin</artifactId>
@@ -61,7 +61,7 @@
       <name>scm-manager release repository</name>
       <url>https://packages.scm-manager.org/repository/public/</url>
     </repository>
-  
+
   </repositories>
 
 </project>
