--- a/build.gradle
+++ b/build.gradle
@@ -28,13 +28,13 @@ plugins {
 }
 
 dependencies {
-  optionalPlugin "sonia.scm.plugins:scm-review-plugin:2.6.4-SNAPSHOT"
+  optionalPlugin "sonia.scm.plugins:scm-review-plugin:2.7.0"
   optionalPlugin "sonia.scm.plugins:scm-mail-plugin:2.1.0"
   testImplementation "com.github.sdorra:shiro-unit:1.0.1"
 }
 
 scmPlugin {
-  scmVersion = "2.14.2-SNAPSHOT"
+  scmVersion = "2.15.0"
   displayName = "Issue Tracker"
   description = "Helper classes for issuetracker plugins"
   author = "Cloudogu GmbH"
