--- a/build.gradle
+++ b/build.gradle
@@ -28,12 +28,18 @@ plugins {
 }
 
 dependencies {
+  plugin "sonia.scm.plugins:scm-mail-plugin:2.1.0"
   optionalPlugin "sonia.scm.plugins:scm-review-plugin:2.7.0"
-  optionalPlugin "sonia.scm.plugins:scm-mail-plugin:2.1.0"
 
   testImplementation 'com.github.sdorra:junit-shiro-extension:1.0.1'
   testImplementation "com.github.sdorra:shiro-unit:1.0.1"
   testImplementation 'org.awaitility:awaitility:4.0.3'
+
+  // bean validation tests
+  testImplementation "org.jboss.resteasy:resteasy-validator-provider:4.5.8.Final"
+  testImplementation "org.hibernate.validator:hibernate-validator:6.1.6.Final"
+  testImplementation "javax.el:javax.el-api:3.0.0"
+  testImplementation "org.glassfish:javax.el:3.0.1-b11"
 }
 
 scmPlugin {
