--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "scripts": {
         "build": "plugin-scripts build",
         "watch": "plugin-scripts watch",
+        "test": "jest src/main/js",
         "postinstall": "plugin-scripts postinstall"
     },
     "dependencies": {
