--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@scm-manager/scm-issuetracker-plugin",
     "private": true,
-    "version": "3.2.2-SNAPSHOT",
+    "version": "3.2.2",
     "license": "MIT",
     "main": "./src/main/js/index.ts",
     "scripts": {
